--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mytemplate",
+  "name": "pampaui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,9 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
+    "core-js": "^3.16.2",
     "feather-icons": "^4.28.0",
-    "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
